# CCstatus

./: .gitignore  AGENTS.md  BUILD-CONFIG.md  BUILD-GUIDE.md  BUILD.md  CHANGELOG.md  Cargo.toml  NPM_PUBLISHING_FIX.md  README.md  README.zh.md  README_EN.md  RELEASE-NOTES.md  claude.local.md  latest.json  qna-stdin-windows-jsonl.md
.cursor/rules/: commonsense.mdc  efficiency.mdc
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
.serena/cache/rust/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_conventions.md  comprehensive_error_analysis.md  consolidated_debug_logger_plan_2025_08_25.md  debug_logger_analysis_2025_08_25.md  error_tracker_enhancement_completion.md  error_tracker_enhancement_plan.md  final_error_tracker_implementation.md  log_rotation_design_2025_08_25.md  project_overview.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
npm/main/: README.md  package.json
npm/main/scripts/: postinstall.js  update-settings.js
npm/scripts/: prepare-packages.js
project/: Network-feature-dev.md  WorkingLog.md  cursor-agent-feedback.json  reqwest_hype_isahc 对比.md
project/network/: 0-network-monitoring-Ideas-Final.md  1-network_monitoring-Requirement-Final.md  2-network_monitoring-impl_Plan.md  3-network_monitoring-e2e-test-proposal.md  Monitor-research.md  zshrc.sample
src/: cli.rs  main.rs  updater.rs
src/config/: defaults.rs  loader.rs  types.rs
src/core/: mod.rs  statusline.rs
src/core/network/: credential.rs  credential_review.md  debug_logger.rs  debug_logger_review.md  error_tracker.rs  error_tracker_review.md  http_monitor.rs  http_monitor_phase_timings-review.md  http_monitor_review.md  jsonl_monitor.rs  jsonl_monitor_enhancement_proposal.md  jsonl_monitor_enhancement_proposal_review.md  jsonl_monitor_review.md  mod.rs  network_segment.rs  network_segment_review.md  oauth_masquerade.rs  status_renderer.rs  status_renderer_review.md  types.rs
src/core/network/proxy_health/: checker.rs  client.rs  config.rs  integration_tests.rs  mod.rs  parsing.rs  url.rs
src/core/segments/: git.rs  mod.rs  network.rs  update.rs
src/ui/: app.rs  mod.rs  utils.rs
src/ui/components/: color_picker.rs  icon_selector.rs  preview.rs  settings.rs
src/ui/themes/: presets.rs
src/updater/: geo.rs  github.rs  manifest.rs  mod.rs  state.rs  url_resolver.rs
tests/: main.rs  run_e2e_ccstatus-README.md  run_e2e_ccstatus.sh  test_input.json
tests/common/: mod.rs
tests/core/: mod.rs
tests/core/network/: credential.md  credential_env_test.rs  credential_oauth_test.rs  credential_tests.rs  debug_logger_review.md  http_monitor_health_client_tests.rs  http_monitor_integration_tests.rs  http_monitor_proxy_tests.rs  http_monitor_review.md  http_monitor_test.rs  jsonl_monitor_tests.rs  mod.rs  network_segment_review.md  network_segment_tests.rs  oauth_masquerade_tests.rs  status_renderer_review.md  status_renderer_tests.rs  update_trigger_test.rs
tests/core/network/proxy_health/: checker_tests.rs  integration_tests.rs  mod.rs  parsing_tests.rs  url_tests.rs
tests/network/: credential_tests.rs  debug_logger_tests.rs  error_tracker_tests.rs  jsonl_monitor_tests.rs  jsonl_monitor_updated_tests.rs  mod.rs  segment_tests.rs  status_renderer_tests.rs
tests/update/: cli_test.rs  geo_test.rs  manifest_client_test.rs  state_test.rs  url_resolver_test.rs
tests/updater/: cli_test.rs  geo_test.rs  github_test.rs  manifest_test.rs  mod.rs  state_test.rs  url_resolver_test.rs
