[package]
name = "ccstatus"
version = "1.0.4"
edition = "2021"
description = "CCstatus - Claude Code Network Monitor and StatusLine tool with connectivity monitoring"
authors = ["MaurUppi"]
license = "MIT"
repository = "https://github.com/MaurUppi/CCstatus"
readme = "README.md"
keywords = ["claude", "statusline", "monitoring", "rust", "claude-code"]
categories = ["command-line-utilities", "development-tools", "network-programming"]

[dependencies]
# 核心依赖
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
toml = "0.9.5"

# TUI 依赖
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.29.0", optional = true }

# 颜色处理
ansi_term = { version = "0.12", optional = true }
ansi-to-tui = { version = "7.0", optional = true }

# 可选：更新功能
ureq = { version = "3.1.0", features = ["json"], optional = true }
semver = { version = "1.0", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
dirs = { version = "6.0.0", optional = true }

# 网络监控依赖
isahc = { version = "1.7", features = ["json"], optional = true }
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "time", "sync", "fs", "macros"], optional = true }
regex = { version = "1.10", optional = true }
thiserror = "2.0.15"

[features]
default = ["tui", "self-update", "network-monitoring"]
tui = ["ratatui", "crossterm", "ansi_term", "ansi-to-tui", "chrono"]
self-update = ["ureq", "semver", "chrono", "dirs"]
network = ["isahc", "tokio", "regex"]

[dev-dependencies]
tempfile = "3.0"
