[package]
name = "ccstatus"
version = "2.0.3"
edition = "2021"
description = "CCstatus - Claude Code Network Monitor and StatusLine tool with connectivity monitoring"
authors = ["MaurUppi"]
license = "MIT"
repository = "https://github.com/MaurUppi/CCstatus"
readme = "README.md"
keywords = ["claude", "statusline", "monitoring", "rust", "claude-code"]
categories = ["command-line-utilities", "development-tools", "network-programming"]

[dependencies]
# 核心依赖
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
toml = "0.9.5"

# TUI 依赖
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.29.0", optional = true }

# 颜色处理
ansi_term = { version = "0.12", optional = true }
ansi-to-tui = { version = "7.0", optional = true }

# 核心日志依赖 (always required for debug logging)
# chrono = { version = "0.4", features = ["serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
dirs = { version = "6.0.0" }
regex = { version = "1.10" }
# uuid = { version = "1.0", features = ["v4"] }
uuid = { version = "1.18.0", default-features = false, features = ["v4", "std"] }
flate2 = "1.0"
fs2 = "0.4"
async-trait = "0.1"
futures = "0.3"

# 可选：更新功能
ureq = { version = "3.1.0", features = ["json"], optional = true }
semver = { version = "1.0", optional = true }

# 网络监控依赖
# Minimize isahc: drop default features (no http2/cookies/static-curl)
# isahc = { version = "1.7", features = ["json"], optional = true }
isahc = { version = "1.7", default-features = false, features = ["static-curl"], optional = true }
# Trim tokio: single-threaded runtime + only used pieces
# tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "time", "sync", "fs", "macros", "io-util"], optional = true }
tokio = { version = "1.47.1", default-features = false, features = ["rt", "macros","time", "fs", "io-util", "sync"], optional = true }
# thiserror = "2.0.15"

# Phase timings with curl (optional for real DNS/TCP/TLS measurements)
curl = { version = "0.4", optional = true }

[features]
default = ["network-monitoring"]
tui = ["ratatui", "crossterm", "ansi_term", "ansi-to-tui"]
self-update = ["ureq", "semver"]
network-monitoring = ["isahc", "tokio"]
# Real DNS/TCP/TLS phase timings via curl (optional, off by default)
timings-curl = ["curl", "network-monitoring"]
# Static curl for maximum portability (primarily Windows)
timings-curl-static = ["timings-curl", "curl/static-curl"]

[dev-dependencies]
tempfile = "3.0"

[profile.release]
# Size-focused profile
lto = "thin"
codegen-units = 1
opt-level = "s"
panic = "abort"
strip = "symbols"